--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
-    <script defer src="./script.js" defer></script>
+
 </head>
+<style>
+    .weekends {
+        font-style: italic;
+    }
+
+    .currentDay {
+        font-weight: bold;
+    }
+</style>
+
+<script defer src="./script.js" defer></script>
 
 <body>
-    <div>Hello world!!!!</div>
+    <p>Дни недели:</p>
 </body>
 
 </html>
-
-<!-- Changes -->
