--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <div class="controls">
-            <button id="btn">Button</button>
+            <button id="btn">Change color</button>
         </div>
 
         <div class="controls">
@@ -34,7 +34,7 @@
         <div class="controls">
             <div id="square">
                 <div id="circle">
-                    <button id="e_btn">Жмяк</button>
+                    <button id="e_btn">Нажми меня</button>
                 </div>
             </div>
         </div>
