--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 </select>
                             </div>
                             <div class="main-controls__input">
-                                <input type="text" placeholder="Количество экранов">
+                                <input type="text" placeholder="Количество экранов" value="">
                             </div>
                         </div>
 
